test/parser/import-identifier.delta
// RUN: %check_errors %not %delta -parse %s

// CHECK: [[@LINE+1]]:8: error: expected identifier or string literal after 'import', got '<'
import <iostream>
